<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/splash_screen"
        android:src="@drawable/warhammer_v3_logo" />

    <LinearLayout
        android:id="@+id/new_player_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/splashscreen"
        android:layout_marginBottom="@dimen/medium_padding"
        android:layout_marginTop="@dimen/medium_padding"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/medium_padding"
        android:paddingRight="@dimen/medium_padding"
        android:weightSum="6">


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <EditText
                android:id="@+id/new_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/home_create_player"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/new_player_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_add" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_player_fields"
        android:layout_gravity="center"
        android:scrollbars="vertical" />

</RelativeLayout>